<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="timer"
            type="com.example.timerapp.database.Timer" />

        <variable
            name="clickListener"
            type="com.example.timerapp.adapter.TimerListListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginRight="@dimen/card_margin"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/start_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_margin="@dimen/card_margin"
                android:onClick="@{() -> clickListener.onStartClick(timer)}"
                app:backgroundTint="#ffffff"
                app:borderWidth="0dp"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_play_arrow"
                app:tint="#111111" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/top_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> clickListener.onClick(timer)}"
                    android:orientation="vertical"
                    android:padding="@dimen/card_padding">

                    <TextView
                        android:id="@+id/detail_timer_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{timer.name}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        tools:text="基本情報技術者午後試験" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/detail_total_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                            app:totalTime="@{timer.total}"
                            tools:text="150分"/>

                        <ImageView
                            android:id="@+id/detail_notification_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_margin"
                            android:layout_marginEnd="@dimen/standard_margin"
                            app:notificationType="@{timer.notificationType}"
                            app:timerDetail="@{timer.detail}"
                            tools:src="@drawable/ic_vibration" />

                        <TextView
                            android:id="@+id/detail_notification_type_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/icon_padding"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                            app:notificationType="@{timer.notificationType}"
                            tools:text="通知" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/detail_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/preset_timer_detail" />

                        <ImageView
                            android:id="@+id/expand_arrow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/expand_arrow" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />
                </LinearLayout>


                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/expandable_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:el_duration="1000"
                    app:el_expanded="false"
                    app:el_parallax="0.5">

                    <TextView
                        android:id="@+id/detail_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/card_margin"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:text="@{timer.detail}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        tools:text="設問1　20分　　通知：5分前\n設問2-5   30分　通知：5分前\n設問2-5   30分　通知：5分前\n
設問6     45分     通知：10分前\n設問7      35分　通知：10分前" />
                </net.cachapa.expandablelayout.ExpandableLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</layout>