<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.timerapp.ui.timerlist.TimerListViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/initial_timer_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:visibility="@{viewModel.isInitial() ? View.VISIBLE : View.GONE}"
            apps:cardCornerRadius="8dp"
            apps:cardElevation="10dp"
            apps:layout_constraintEnd_toEndOf="parent"
            apps:layout_constraintStart_toStartOf="parent"
            apps:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/card_margin"
                android:text="@string/initial_use"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/timer_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            apps:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            apps:layout_constraintBottom_toBottomOf="parent"
            apps:layout_constraintEnd_toEndOf="parent"
            apps:layout_constraintStart_toStartOf="parent"
            apps:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/icon_margin"
            android:layout_marginBottom="@dimen/icon_margin"
            android:elevation="10dp"
            android:onClick="@{() -> viewModel.createInsertTimerDialog()}"
            apps:layout_constraintBottom_toBottomOf="parent"
            apps:layout_constraintEnd_toEndOf="parent"
            apps:srcCompat="@drawable/ic_add" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/icon_margin"
            android:layout_marginBottom="@dimen/icon_margin"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:onClick="@{() -> viewModel.navigateToDeleteTimer()}"
            apps:borderWidth="2dp"
            apps:layout_constraintBottom_toBottomOf="parent"
            apps:layout_constraintEnd_toStartOf="@+id/add_list"
            apps:srcCompat="@drawable/ic_delete"
            apps:tint="@color/secondaryColor" />

        <ImageButton
            android:id="@+id/information"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="@dimen/standard_margin"
            android:background="@color/white"
            android:src="@drawable/ic_info"
            apps:layout_constraintBottom_toBottomOf="parent"
            apps:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>