<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="timer"
            type="com.example.timerapp.database.Timer" />

        <variable
            name="clickListener"
            type="com.example.timerapp.adapter.TimerListListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginRight="@dimen/card_margin"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/start_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_margin="@dimen/card_margin"
                android:onClick="@{() -> clickListener.onStartClick(timer)}"
                app:backgroundTint="#ffffff"
                app:borderWidth="0dp"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_play_arrow"
                app:tint="#111111" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/top_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> clickListener.onClick(timer)}"
                    android:orientation="vertical"
                    android:padding="@dimen/card_padding">

                    <TextView
                        android:id="@+id/simple_timer_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{timer.name}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        tools:text="基本情報技術者午後試験" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:layout_marginEnd="@dimen/setting_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/simple_total_time"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                            app:totalTime="@{timer.total}"
                            tools:text="計  2時間30分" />

                        <ImageView
                            android:id="@+id/simple_notification_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/icon_margin"
                            android:layout_marginEnd="@dimen/standard_margin"
                            app:notificationType="@{timer.notificationType}"
                            app:timerDetail="@{timer.detail}"
                            tools:src="@drawable/ic_vibration"/>

                        <TextView
                            android:id="@+id/simple_detail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:timerDetail="@{timer.detail}"
                            android:drawablePadding="@dimen/icon_padding"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                            tools:text="通知 : 10分50前" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</layout>