<resources>
    <string name="app_name">試験勉強用タイマー</string>
    <string name="delete">削除</string>
    <string name="cancel">キャンセル</string>
    <string name="save">保存</string>
    <string name="caution">タイマーの設定を行って下さい。</string>
    <string name="ok">OK</string>
    <string name="timer_setting">タイマーの終了を通知画面に表示する</string>
    <string name="initial_use">ご利用頂きありがとうございます。\n「+」ボタンを押してタイマーを作成しましょう。</string>
    <string name="initial_set_preset">「+」ボタンを押してタイマーの設定を行いましょう。</string>
    <string name="timer_name">タイマーの名前</string>
...
    <string name="min">分</string>
    <string name="sec">秒</string>
    <string name="setting_title">設定</string>
    <string name="setting_sound">サウンド</string>
    <string name="setting_preset">事前通知設定</string>
    <string name="alarm">アラーム</string>
    <string name="vibration">バイブレーション</string>
    <string name="preset_timer_detail">プリセットタイマーの詳細</string>
    <string name="content_description_delete">リストの削除</string>
    <string name="timer_stop_message">タイマーを終了しますか。</string>
    <string name="setting_update">タイマー名と設定の変更を反映する</string>
    <string name="initial_min">000</string>
    <string name="initial_sec">00</string>
...
